--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Tweet to Image — Download a Tweet as an Instagram-Ready Image"
     />
+    <meta name="robots" content="follow, index"/>
+    <meta property="og:url" content="https://tweets.harshitkumar.tech/"/><link rel="canonical" href="https://tweets.harshitkumar.tech/"/><meta property="og:type" content="website"/><meta property="og:site_name" content="Tweet To Image"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Tweet to Image — Download a Tweet as an Instagram-Ready Image</title>
