--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Tweet to Image — Download a Tweet as an Instagram-Ready Image"
     />
     <meta name="robots" content="follow, index"/>
-    <meta property="og:url" content="https://tweet-to-image.tech"/><link rel="canonical" href="https://tweet-to-image.tech"/><meta property="og:type" content="website"/><meta property="og:site_name" content="Tweet To Image"/>
+    <meta property="og:url" content="https://www.tweet-to-image.tech"/><link rel="canonical" href="https://www.tweet-to-image.tech"/><meta property="og:type" content="website"/><meta property="og:site_name" content="Tweet To Image"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:image" content="/imagemain.png"/>
